--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -30,14 +30,11 @@
     <gap:splash gap:platform="ios" height="640" src="res/screen/iphone_retina_landscape.png" width="960" />
     <gap:splash gap:platform="ios" height="960" src="res/screen/iphone_retina_portrait.png" width="640" />
     <gap:splash gap:platform="winphone" height="800" src="res/screen/windows_phone_portrait.jpg" width="480" />
+    <gap:plugin name="phonegap-nfc" source="npm" />
     <access origin="*" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="phonegap-version" value="1.9.0" />
     <preference name="orientation" value="default" />
     <preference name="target-device" value="universal" />
     <preference name="fullscreen" value="false" />
-    <feature name="NfcPlugin">
-        <param name="android-package"
-         value="com.chariotsolutions.nfc.plugin.NfcPlugin" />
-    </feature>
 </widget>
